Connected styles in index.html and added meta tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Résumé</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="contact-info.css" />
+    <link rel="stylesheet" href="experience_additional.css" />
+    <link rel="stylesheet" href="intro_skill.css" />
   </head>
   <body>
     ― Hello World! &#x1F609;
